# dock_plugin_apps

./: Cargo.toml  justfile
.github/workflows/: rust.yml
data/: com.System76.CosmicDockAppList.desktop  com.System76.CosmicDockAppList.metainfo.xml  com.system76.CosmicDockAppList.gschema.xml  com.system76.CosmicDockAppList.metainfo.xml
debian/: changelog  control  rules
i18n/en/: cosmic_dock_app_list.ftl
src/: lib.rs  main.rs  style.css  utils.rs
src/apps_container/: imp.rs  mod.rs
src/apps_window/: imp.rs  mod.rs
src/dock_item/: imp.rs  mod.rs
src/dock_list/: imp.rs  mod.rs
src/dock_object/: imp.rs  mod.rs
src/dock_popover/: imp.rs  mod.rs
