[package]
name = "dock_plugin_apps"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
# cosmic-plugin = { path = "../cosmic-plugin" }
cosmic-plugin = { git = "https://github.com/wash2/dock-plugin" }
cascade = "1.0.0"
gtk4 = { version = "0.4.5", features = ["v4_4"] }
gtk4-sys = "0.4.5"
glib-sys = "0.15.1"
gdk4 = "0.4.4"
gio = "0.15.3"
gobject-sys = "0.15.1"
libcosmic = { git = "https://github.com/pop-os/libcosmic" }
relm4-macros = { git = "https://github.com/AaronErhardt/Relm4" }
serde = "1.0.136"
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = ["sync"] }
futures = "0.3.19"
futures-util = "0.3.19"
once_cell = "1.9.0"
xdg = "2.4.0"
zbus = "2.0.1"
zvariant = "3.1.2"
zvariant_derive = "3.1.2"
libloading = "0.7.3"
gsk4 = "0.4.6"

[build-dependencies]
cbindgen = "0.20.0"

[lib]
name = "apps_plugin"
crate-type = ["cdylib"]

