[package]
name = "cosmic-dock-app-list"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
cosmic-dock-epoch-config = { path = "../cosmic-dock-epoch/cosmic-dock-epoch-config", features = ["gtk4"] }
cascade = "1.0.0"
gtk4 = { version = "0.4.5", features = ["v4_4"] }
gio = "0.15.3"
libcosmic = { git = "https://github.com/pop-os/libcosmic" }
relm4-macros = { git = "https://github.com/AaronErhardt/Relm4" }
serde = "1.0.136"
serde_json = "1.0.78"
tokio = { version = "1.16.1", features = ["sync"] }
futures = "0.3.19"
futures-util = "0.3.19"
once_cell = "1.9.0"
xdg = "2.4.0"
zbus = "2.0.1"
zvariant = "3.1.2"
zvariant_derive = "3.1.2"
gsk4 = "0.4.6"
pretty_env_logger = "0.4"
anyhow = "1.0.50"
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"] }
i18n-embed-fl = "0.6.4"
rust-embed = "6.3.0"

[build-dependencies]
gio = "0.15.10"
